# JetsonVisualMemoryAgent

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-minimal.txt  requirements.txt
.superpowers/brainstorm/: .last-token
.superpowers/brainstorm/1318-1784566058/content/: project-directions.html  project-map-purpose.html  waiting-2.html
.superpowers/brainstorm/1318-1784566058/state/: server-stopped
apps/: agent_cli.py  ask_image.py  query_memory.py  replay_episode.py
data/episodes/: README.md  sample_episodes.jsonl
data/images/: README.md
data/videos/: README.md
docs/: README.md  clip_memory_design.md  interview_pitch.md  jd_alignment.md  ros2_bridge_design.md  route.md  serving_framework_notes.md
docs/development/: README.md  architecture.md  clip_memory_design.md  ros2_bridge_design.md  serving_framework_notes.md  testing.md
docs/ops/: README.md  jetson-deployment.md
docs/superpowers/: README.md
docs/superpowers/specs/: 2026-07-21-qwen-vlm-deployment-design.md
jetson_visual_memory/: __init__.py  backends.py  encoders.py  env_probe.py  episodes.py  memory_index.py  metrics.py  schema.py  vlm.py
reports/: README.md
tests/: test_backends.py  test_episodes.py  test_memory_index.py  test_metrics.py  test_schema.py
tools/: benchmark.py  benchmark_matrix.py  build_index.py  build_trt_engine.py  export_clip_onnx.py  extract_frames.py  probe_env.py
