[project]
name = "jetson-visual-memory-agent"
version = "0.1.0"
description = "Edge visual-language memory and structured reasoning demo for Jetson Orin Nano"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "psutil>=5.9",
]

[project.optional-dependencies]
model = [
    "Pillow>=10.0",
    "transformers>=4.42",
    "accelerate>=0.30",
]
video = [
    "opencv-python>=4.8",
]
pc-torch = [
    "torch",
]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
